# opaque

src/enclave/: CMakeLists.txt
src/enclave/App/: SGXEnclave.h
src/enclave/ServiceProvider/: CMakeLists.txt  SP.h  ServiceProvider.cpp  ServiceProvider.h  ServiceProviderJNI.cpp  tls_client.cpp  tls_client.h  verify_callback.cpp
src/main/scala/edu/berkeley/cs/rise/opaque/: RA.scala
src/main/scala/edu/berkeley/cs/rise/opaque/execution/: SP.scala
